--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<h1>DevOps Fundamentals</h1>
 								<p> Learn how to excel in fusing operations and development
 														</p>
-								<p>DevOps 1346-ja!</p>
+								<p>DevOps 1349-Mykola Kokodynskyy!</p>
 								<p id="myname"></p>
 							</div>
 						</div>
